[gd_scene load_steps=22 format=2]

[ext_resource path="res://button/home.png" type="Texture" id=1]
[ext_resource path="res://bgWhite.JPG" type="Texture" id=2]
[ext_resource path="res://button/homehover.png" type="Texture" id=3]
[ext_resource path="res://animation.gd" type="Script" id=4]
[ext_resource path="res://fonts/RocknRollOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/Exo2-VariableFont_wght.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.482353, 0.0156863, 0.0156863, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0.227451, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.6, 0.2, 1 )

[sub_resource type="DynamicFont" id=7]
size = 15
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.6, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0627451, 0.94902, 0.458824, 1 )

[sub_resource type="StyleBoxFlat" id=10]
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0.866667, 0.909804, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.545098, 0.545098, 0.545098, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0.8, 0.8, 1 )

[sub_resource type="DynamicFont" id=15]
size = 18
outline_size = 1
outline_color = Color( 1, 0.6, 0.2, 1 )
font_data = ExtResource( 5 )

[node name="animation" type="Node2D"]
position = Vector2( -2, 0 )
script = ExtResource( 4 )

[node name="backgound" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = 212.52
margin_top = 75.2599
margin_right = 803.52
margin_bottom = 517.26
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="home" type="TextureButton" parent="."]
margin_left = 19.2866
margin_top = 515.049
margin_right = 87.2866
margin_bottom = 583.049
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play" type="Button" parent="."]
margin_left = 408.966
margin_top = 525.302
margin_right = 493.966
margin_bottom = 563.302
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.968627, 0.941176, 0.941176, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speedUp" type="Button" parent="."]
margin_left = 868.649
margin_top = 198.249
margin_right = 963.649
margin_bottom = 225.249
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speed Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speedDown" type="Button" parent="."]
margin_left = 868.678
margin_top = 236.241
margin_right = 963.678
margin_bottom = 263.241
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speed Down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chgRotate" type="Button" parent="."]
margin_left = 840.0
margin_top = 296.0
margin_right = 988.0
margin_bottom = 323.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Change Rotate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chgDirect" type="Button" parent="."]
margin_left = 840.0
margin_top = 335.286
margin_right = 988.0
margin_bottom = 362.286
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Change Direct"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chgColor" type="Button" parent="."]
margin_left = 855.245
margin_top = 398.375
margin_right = 980.245
margin_bottom = 425.375
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0.105882, 0, 1 )
text = "Change Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="randColor" type="Button" parent="."]
margin_left = 855.245
margin_top = 435.253
margin_right = 980.245
margin_bottom = 462.253
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0.105882, 0, 1 )
text = "Random Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defColor" type="Button" parent="."]
margin_left = 855.245
margin_top = 471.375
margin_right = 980.245
margin_bottom = 498.375
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0392157, 0.105882, 0, 1 )
text = "Default Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stop" type="Button" parent="."]
margin_left = 517.368
margin_top = 525.434
margin_right = 602.368
margin_bottom = 563.434
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.968627, 0.941176, 0.941176, 1 )
text = "STOP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="howTo" type="Button" parent="."]
margin_left = 58.9678
margin_top = 75.133
margin_right = 143.968
margin_bottom = 113.133
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.968627, 0.941176, 0.941176, 1 )
text = "HOW TO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pattern1" type="Button" parent="."]
margin_left = 868.649
margin_top = 96.495
margin_right = 963.649
margin_bottom = 123.495
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pattern 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pattern2" type="Button" parent="."]
margin_left = 868.649
margin_top = 134.549
margin_right = 963.649
margin_bottom = 161.549
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Pattern 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speedLabel" type="Label" parent="."]
margin_left = 700.709
margin_top = 520.128
margin_right = 807.709
margin_bottom = 579.128
__meta__ = {
"_edit_use_anchors_": false
}

[node name="patternLabel" type="Label" parent="."]
margin_left = 211.786
margin_top = 40.6697
margin_right = 318.786
margin_bottom = 99.6697
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="speedUp" to="." method="_on_speedUp_pressed"]
[connection signal="pressed" from="speedDown" to="." method="_on_speedDown_pressed"]
[connection signal="pressed" from="chgRotate" to="." method="_on_chgRotate_pressed"]
[connection signal="pressed" from="chgDirect" to="." method="_on_chgDirect_pressed"]
[connection signal="pressed" from="chgColor" to="." method="_on_chgColor_pressed"]
[connection signal="pressed" from="randColor" to="." method="_on_randColor_pressed"]
[connection signal="pressed" from="defColor" to="." method="_on_defColor_pressed"]
[connection signal="pressed" from="stop" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="howTo" to="." method="_on_howTo_pressed"]
[connection signal="pressed" from="pattern1" to="." method="_on_pattern1_pressed"]
[connection signal="pressed" from="pattern2" to="." method="_on_pattern2_pressed"]
